force-app/main/default/objects/Quote/fields/MPPricingApiStatus__c.field-meta.xml
<CustomField>
    <fullName>MPPricingApiStatus__c</fullName>
    <description>Estado de la integración de precios de un registro de Condiciones de presupuesto asociado el cual necesita el valor sugerido provendiente de una API de precios.</description>
    <inlineHelpText>Estado de la integración de precios de un registro de Condiciones de presupuesto asociado el cual necesita el valor sugerido provendiente de una API de precios.</inlineHelpText>
    <label>Estado API Precios</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MPIntegrationStatusValues</valueSetName>
    </valueSet>
</CustomField>