force-app/main/default/objects/Quote/fields/MPQuoteConditions__c.field-meta.xml
<CustomField>
    <fullName>MPQuoteConditions__c</fullName>
    <label>Condiciones de Presupuesto</label>
    <summaryForeignKey>MPQuoteCondition__c.MPQuote__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>