force-app/main/default/objects/Quote/validationRules/VRQ_001_MPStoreModification.validationRule-meta.xml
<ValidationRule>
    <fullName>VRQ_001_MPStoreModification</fullName>
    <active>true</active>
    <description>Regla de validación que impide modificar el Local asociado a un presupuesto.</description>
    <errorConditionFormula>AND(
OR(
Opportunity.RecordType.DeveloperName = &apos;MPEntry&apos;,
Opportunity.RecordType.DeveloperName = &apos;MPRenovation&apos; 
),
NOT(ISNEW()),
ISCHANGED(MPStore__c),
NOT(
OR(
$Profile.Name = &quot;System Administrator&quot;,
$Profile.Name = &quot;Administrador del sistema&quot;
)
)
)</errorConditionFormula>
    <errorMessage>No es posible modificar el Local asociado a este presupuesto. (VRQ_001)</errorMessage>
</ValidationRule>