force-app/main/default/objects/Quote/validationRules/VRQ_002_MPQuoteInformationModification.validationRule-meta.xml
<ValidationRule>
    <fullName>VRQ_002_MPQuoteInformationModification</fullName>
    <active>true</active>
    <description>Regla de validación que impide realizar cualquier tipo de modificación sobre un presupuesto cuya oportunidad no esté en etapa de &apos;Negociación&apos;.</description>
    <errorConditionFormula>AND(
OR(
Opportunity.RecordType.DeveloperName = &apos;MPEntry&apos;,
Opportunity.RecordType.DeveloperName = &apos;MPRenovation&apos;
),
NOT(ISNEW()),
NOT(
OR(
$Profile.Name = &quot;System Administrator&quot;,
$Profile.Name = &quot;Administrador del sistema&quot;
)
),
OR(
NOT($Permission.MPEditQuoteInformation), 
NOT(ISPICKVAL(Opportunity.StageName, &apos;Cotización&apos;))
)
)</errorConditionFormula>
    <errorMessage>Los presupuestos pueden ser modificados únicamente por el Jefe Comercial mientras la oportunidad esté en etapa de Negociación. (VRQ_002)</errorMessage>
</ValidationRule>